# second_brain_database

./: .env-non-docker.sample  .env.production.example  .env.sample  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .sbd  .sbd-example  .sbd_config  100_PERCENT_SECURITY_ACHIEVEMENT.md  AGENT_6_STATUS.md  AI_AGENTS_TESTING_README.md  AI_ORCHESTRATION_BACKEND_TEST_RESULTS.md  AI_ORCHESTRATION_REAL_WORLD_TESTING_PLAN.md  AI_ORCHESTRATION_TESTING_TODO.md  AI_SECURITY_FIXES_SUMMARY.md  AI_SECURITY_IMPLEMENTATION_SUMMARY.md  COMPLETE_REAL_WORLD_TEST.py  Docker-Compose.yml  Dockerfile  FINAL_AI_INTEGRATION_TEST.py  FINAL_REAL_WORLD_TEST_FIX.py  FINAL_TOOL_REGISTRATION_FIX.py  FIX_SUMMARY.py  IMPROVEMENTS_COMPLETE.md  LANGCHAIN_MCP_FULL_COVERAGE.md  LANGCHAIN_TESTING.md  LANGGRAPH_INTEGRATION_SUMMARY.md  LICENSE  MCP_MODERNIZATION_SUMMARY.md  MCP_TOOL_SUCCESS_REPORT.md  Makefile  OLLAMA_INTEGRATION_SUMMARY.md  QUICK_START_GUIDE.md  RAG_SYSTEM_COMPLETE.md  README.md  SKILLS_DOCUMENTATION_SUMMARY.md  (+129 more)
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/: copilot-instructions.md
.github/prompts/: plan-secondBrainDatabase.prompt.md
.github/workflows/: dev.yml  docker.yml  main.yml  pypi.yml
TODOS/team_plan/: 00_OVERVIEW.md  02_API_DESIGN.md  EXECUTIVE_SUMMARY.md
TODOS/websockets_implementation/: README.md  avatars_banners_themes.md  family.md  sbd_tokens.md
archive/privilege/: routes.py
archive/snapshot_20251104_185011/: .env.development.example  .env.production.example  .pre-commit-config.yaml  .pylintrc  .sbd-example  INTEGRATION_SUCCESS.md  LANGGRAPH_PRODUCTION_STATUS.md  LOG_MONITORING_GUIDE.md  README.md  celerybeat-schedule-wal  chat_ui.html  fix_resource_indentation.py  mcp_connection_guide.py  mcp_server.py  repo_cleanup_analysis.ipynb  test_voice_agent.sh  verify_family_setup.py  verify_platform_config.py  voice_agent_test.html
archive/unused/: final_coverage_test.py.unused  (+1 more)
config/: Makefile  pyproject.toml  requirements.txt  streamlit_requirements.txt
config-templates/: development.sbd  langgraph_development.sbd.unused  m4_16gb.sbd  production.sbd
dev-environment/: check-port.sh  docker-compose.yml  free-port.sh  setup.sh
docs/: 1.2.md  1.3.md  10.1.md  2.1.md  2.2.md  2.3.md  3.1.md  4.2.md  5.2.md  6.2.md  6.3.md  7.1.md  9.1.md  AI_INTEGRATION_SUCCESS_REPORT.md  AI_ORCHESTRATION_REMOVAL_SUMMARY.md  ARCHITECTURE.md  CHAT_CONFIGURATION.md  CHAT_MIGRATION_GUIDE.md  CHAT_MONITORING.md  DEEPSEEK_SETUP_GUIDE.md  DEPENDENCY_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DEV_GUIDE.md  DOCLING_LLAMAINDEX_OLLAMA_RAG_IMPLEMENTATION.md  ERROR_HANDLING_SYSTEM.md  FAMILY_SBD_WALLET_COMPLETE.md  FASTMCP_SOLUTION.md  FLASHCARD_IMPLEMENTATION_PLAN.md  FLUTTER_AI_INTEGRATION_SUMMARY.md  FLUTTER_EMOTION_TRACKER_AI_INTEGRATION_GUIDE.md  FLUTTER_UI_UX_MODERNIZATION_PLAN.md  INDEX.md  IPAM_API_DOCUMENTATION_STATUS.md  IPAM_API_DOCUMENTATION_UPDATE_SUMMARY.md  IPAM_API_GUIDE.md  IPAM_BACKGROUND_TASKS.md  IPAM_DOCUMENTATION_VERIFICATION.md  IPAM_ENHANCEMENTS_API_GUIDE.md  IPAM_ENHANCEMENTS_COMPLETE_API_GUIDE.md  (+73 more)
examples/: rag_example.py
infra/: production_app.py
json/: comprehensive_system_validation_report_20250913_001333.json  enhanced_audit_compliance_validation_20250913_110123.json  enhanced_audit_compliance_validation_20250913_110157.json  family_core_operations_validation_results.json  family_integration_validation_results.json  family_notification_system_test_report_20250912_195433.json  offline_system_validation_report_20250913_001756.json  production_readiness_assessment_20250913_002038.json
logs/: langgraph_dev.log.unused
n8n_workflows/: family_workflows.md
project-skills/: SKILLS_NAVIGATION_GUIDE.md  TECHNICAL_DEEP_DIVE.md
scripts/: add_rag_routes.py  automated_code_fixes.py  check_webrtc_users.sh  comprehensive_codebase_improvements.py  create_test_user.py  create_webrtc_test_users.sh  dev_setup_commands.txt  fix_ipam_owner_fields.py  fix_test_auth.py  grant_ipam_by_id.py  grant_ipam_permissions.py  inspect_user.py  launch_voice_agent.py  lint.py  list_users.py  organize_documentation.py  rag_integration_test.py  rag_quick_setup.py  reset_blocklist_and_counts.py  run_chat_migration.py  run_ipam_enhancements_migration.py  run_webrtc_test.sh  run_webrtc_tests.sh  seed_continent_country_mapping.py  seed_shop_items.py  setup_club_indexes.py  setup_mcp_auth.py  setup_rag_user.py  start.sh  start_streamlit_app.sh  test_invitation_filtering.py  test_ipam_enhancements.sh  test_received_invitations.py  validate_webrtc.py  verify_ipam_backward_compatibility.sh  verify_ipam_indexes.py  verify_ipam_metrics.py
team_plan/: 01_DATABASE_DESIGN.md  15_IMPLEMENTATION_CHECKLIST.md  ARCHITECTURE_DIAGRAMS.md
templates/: login.html  register.html
tests/: IPAM_ENHANCEMENTS_TEST_PLAN.md  IPAM_FIXES_SUMMARY.md  IPAM_INTEGRATION_TESTS_NOTES.md  IPAM_RETIREMENT_TESTS_SUMMARY.md  conftest.py  docker.test.env  fetch_user_rohanbatra.py  integration_auto_wallet_init.py  integration_credential_management.py  integration_endpoint_integration.py  integration_member_role_update.py  integration_permanent_token_integration.py  integration_route_registration.py  integration_shop_payment_endpoints.py  interactive_user_agent_test.py  run_pkce_tests.py  simple_test.py  test_abuse_bypass.py  test_account_name.py  test_allow_once_endpoints.py  test_api_documentation.py  test_audit_endpoint.py  test_auth_code_manager.py  test_auth_code_simple.py  test_auto_wallet_init.py  test_blog_integration.py  test_blog_security.py  test_cleanup_simple.py  test_combined_lockdown_dependency.py  test_comprehensive_system_validation.py  test_config.py  test_consent_manager.py  test_conversation_history_manager.py  test_credential_management.py  test_curl_plan_validation.sh  test_database_connection.py  test_database_transaction_safety.py  test_database_transaction_safety_comprehensive.py  test_dev_environment.py  test_documentation_config.py  (+176 more)
tools/: check_webrtc_users.py  rag_token.txt  streamlit_rag_app.py  unlock_account.py  webrtc_test.html
(+1189 files in other folders)
