[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 


[project]
name = "second_brain_database"
version = "0.0.4"
authors = [
  { name="Rohan Batra", email="contact@rohanbatra.in" },
]
description = "A Python package that serves as the foundation for my Second Brain database, designed to store and organize knowledge for easy retrieval through various applications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"flask",
"pymongo",
"flask-cors",
"PyJWT",
"bcrypt",
"gunicorn",
"flask-limiter",
"redis",
"flask_mail",
"mailtrap",
"python-dotenv",
]


[project.urls]
"Homepage" = "https://github.com/rohanbatrain/second-brain-database"
"Bug Tracker" = "https://github.com/rohanbatrain/second-brain-database/issues"
