[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 


[project]
name = "second_brain_database"
version = "0.0.4"
authors = [
  { name="Rohan Batra", email="contact@rohanbatra.in" },
]
description = "A Python package that serves as the foundation for my Second Brain database, designed to store and organize knowledge for easy retrieval through various applications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"flask",
"pymongo",
"flask-cors",
"PyJWT",
"bcrypt",
"gunicorn",
"flask-limiter",
"redis",
"flask_mail",
"mailtrap",
"python-dotenv",
]


[project.urls]
"Homepage" = "https://github.com/rohanbatrain/second_brain_database"
"Bug Tracker" = "https://github.com/rohanbatrain/second_brain_database/issues"

# Black configuration for code formatting
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | \.pytest_cache
  | __pycache__
)/
'''

# isort configuration for import sorting
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
known_first_party = ["second_brain_database"]
known_third_party = [
    "fastapi",
    "uvicorn",
    "pymongo",
    "redis",
    "bcrypt",
    "jose",
    "pydantic",
    "pytest",
    "httpx",
    "aiohttp",
    "cryptography",
    "prometheus_fastapi_instrumentator"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
combine_as_imports = true

# mypy configuration for type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable this
disallow_incomplete_defs = false  # Gradually enable this
check_untyped_defs = true
disallow_untyped_decorators = false  # Gradually enable this
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "pymongo.*",
    "redis.*",
    "bcrypt.*",
    "jose.*",
    "loki_logger_handler.*",
    "prometheus_fastapi_instrumentator.*"
]
ignore_missing_imports = true

# Coverage configuration for test coverage reporting
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]