[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 

[project]
name = "second_brain_database"
version = "0.0.4"
authors = [
  { name="Rohan Batra", email="contact@rohanbatra.in" },
]
description = "A Python package that serves as the foundation for my Second Brain database, designed to store and organize knowledge for easy retrieval through various applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Web Framework and ASGI Server
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    # Database and Storage
    "motor>=3.7.0,<4.0.0", # MongoDB driver (used by motor)
    "redis>=5.0.0,<6.0.0", # Redis client
    # Data Validation and Settings
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.9.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "email-validator>=2.0.0,<3.0.0",
    # Authentication and Security
    "python-jose[cryptography]>=3.3.0,<4.0.0", # JWT handling
    "bcrypt>=4.0.0,<5.0.0", # Password hashing
    "cryptography>=41.0.0,<42.0.0", # Cryptographic operations
    "pyotp>=2.8.0,<3.0.0", # TOTP/HOTP library for 2FA
    # HTTP Client
    "httpx>=0.25.0,<1.0.0", # HTTP client for external API calls
    "aiohttp>=3.8.0,<4.0.0", # Alternative HTTP client
    # QR Code Generation
    "qrcode[pil]>=7.4.0,<8.0.0", # QR code generation with PIL support
    # MCP Integration
    "fastmcp>=2.0.0,<3.0.0", # FastMCP framework for Model Context Protocol
    # Monitoring and Metrics
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "python-multipart>=0.0.20",
    "loki-logger-handler>=1.1.2",
    "requests>=2.32.4",
    "ffmpeg>=1.4",
    "numpy>=1.26.4",
    "sounddevice>=0.5.3",
    "websockets[speedups]>=12.0",
    "docling>=2.61.1",
    "celery>=5.5.3",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    # LlamaIndex and Vector Search
    "llama-index>=0.12.0,<1.0.0",
    "llama-index-vector-stores-qdrant>=0.5.0,<1.0.0",
    "llama-index-embeddings-fastembed>=0.4.0,<1.0.0",
    "llama-index-llms-ollama>=0.4.0,<1.0.0",
    "fastembed>=0.5.0,<1.0.0",
    # Ollama Integration
    "ollama>=0.4.8,<1.0.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    # LangGraph and LangChain for Chat System
    "langgraph>=0.2.0,<1.0.0",
    "langchain-ollama>=0.2.0,<1.0.0",
    "tiktoken>=0.8.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    # Code Quality and Linting
    "pylint>=3.3.0,<4.0.0",
    "black>=23.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    
    # Testing Framework
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    
    # Pre-commit Hooks
    "pre-commit>=3.4.0,<4.0.0",
    
    # Development Tools
    "python-multipart>=0.0.6,<1.0.0",  # For form data handling in development
]

monitoring = [
    # Prometheus and Observability
    "prometheus-client>=0.20.0,<1.0.0",
    
    # Optional Grafana Integration
    "grafana-api>=1.0.0,<2.0.0",
]

docs = [
    # Documentation Generation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    
    # API Documentation
    "jsonschema>=4.0.0,<5.0.0",  # For OpenAPI schema validation
]

test = [
    # Extended Testing Dependencies
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",  # For testing HTTP clients
    "jsonschema>=4.0.0,<5.0.0",  # For API response validation in tests
]

all = [
    # Include all optional dependencies
    "second_brain_database[dev,monitoring,docs,test]",
]


[project.urls]
"Homepage" = "https://github.com/rohanbatrain/second_brain_database"
"Bug Tracker" = "https://github.com/rohanbatrain/second_brain_database/issues"

[tool.setuptools]
packages = {find = {where = ["src"]}}

# Black configuration for code formatting
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | \.pytest_cache
  | __pycache__
  | src
)/
'''

# isort configuration for import sorting
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["tests"]
known_first_party = ["second_brain_database"]
known_third_party = [
    "aiohttp",
    "bcrypt",
    "cryptography",
    "dotenv",
    "email_validator",
    "fastapi",
    "fastmcp",
    "grafana_api",
    "httpx",
    "jose",
    "jsonschema",
    "mkdocs",
    "motor",
    "multipart",
    "mypy",
    "pydantic",
    "pydantic_settings",
    "pylint",
    "pymongo",
    "pyotp",
    "pytest",
    "qrcode",
    "redis",
    "uvicorn",
    "prometheus_client",
    "prometheus_fastapi_instrumentator"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
combine_as_imports = true

# mypy configuration for type checking
[tool.mypy]
explicit_package_bases = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable this
disallow_incomplete_defs = false  # Gradually enable this
check_untyped_defs = true
disallow_untyped_decorators = false  # Gradually enable this
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "bcrypt.*",
    "fastmcp.*",
    "grafana_api.*",
    "jose.*",
    "loki_logger_handler.*",
    "motor.*",
    "multipart.*",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*",
    "pymongo.*",
    "pyotp.*",
    "qrcode.*",
    "redis.*",
    "docling.*",
    "celery.*",
    "kombu.*",
    "jsonschema.*",
    "psutil.*",
    "requests.*",
    "second_brain_database.integrations.mcp.server",
    "second_brain_database.managers.database_manager",
    "second_brain_database.sbd_tokens",
    "second_brain_database.utils.tokens",
    "second_brain_database.utils.redis_utils",
    "second_brain_database.config.config",
    "second_brain_database.database.database"
]
ignore_missing_imports = true

# Coverage configuration for test coverage reporting
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
]
